# drons-trip-dashboard

./: .env.sample  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci_cd.yml
drone-analytics/: desktop.ini  package-lock.json  package.json  server.py
drone-analytics/src/: App.css  App.js
drone-analytics/src/components/FlightDashboard/: FlightDashboard.js
drone-analytics/src/components/Header/: Header.js
drone-analytics/src/components/Map/: Map.css  Map.js
drone-analytics/src/components/RegionDetails/: RegionDetails.js
drone-analytics/src/data/: flightData.js  flightData.json
drone-analytics/src/services/: api.js
frontend/: Dockerfile  package-lock.json  package.json  preprocessing.py  server.py
frontend/src/: App.css  App.js
frontend/src/components/Dashboard/: Dashboard.js
frontend/src/components/DateFilters/: DateFilters.js
frontend/src/components/FileUpload/: FileUpload.css  FileUpload.js
frontend/src/components/Header/: Header.js
frontend/src/components/Map/: Map.css  Map.js
frontend/src/components/RegionInfo/: RegionInfo.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
nginx/: Dockerfile  default.conf.template  nginx.conf
server/: Dockerfile  Makefile  pyproject.toml  setup.cfg
server/app/: __main__.py
server/app/config/: __init__.py  default.py  gunicorn.py  test.py  utils.py
server/app/db/connection/: session.py
server/app/db/migrator/: env.py
server/app/db/migrator/versions/: 2023-02-06_60c08b9bae01_.py  2025-09-30_1b71b5287805_.py
server/app/db/models/: __init__.py  flight.py
server/app/db/repository/: __init__.py  base.py  flight.py  user.py
server/app/endpoints/: __init__.py  flights.py  ping.py  user.py
server/app/schemas/flights/: __init__.py  flight.py  statistic.py
server/app/schemas/user/: __init__.py  registration.py  token.py  user.py
server/app/utils/flight/: __init__.py  business_logic.py
server/app/utils/health_check/: __init__.py
server/app/utils/user/: __init__.py  business_logic.py  database.py
server/tests/: conftest.py  utils.py
server/tests/fixtures/: user.py
server/tests/test_functions/health_check/: test_health_check.py
server/tests/test_functions/user/: test_business_logic.py  test_database_user.py
server/tests/test_handlers/test_ping/: test_health_check.py
server/tests/test_handlers/test_user/: test_authentication.py  test_me.py  test_registration.py  test_remove.py  test_update.py
server/tests/test_migrations/: test_stairway.py
