[tool.poetry]
name = "drons-trip-dashboard"
version = "0.1.0"
description = "Hackaton task"
authors = ["ZZaRRyaDD <example@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.9"
fastapi = "^0.116.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
SQLAlchemy-Utils = "^0.42.0"
alembic = "^1.16.5"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.36.0"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"
passlib = "^1.7.4"
email-validator = "^2.3.0"
bcrypt = "^4.3.0"
python-jose = "^3.5.0"
httpx = "^0.28.1"
gunicorn = "^23.0.0"
asyncpg = "0.30.0"
pydantic-settings = "^2.10.1"
pytest-xdist = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-aiohttp = "^1.1.0"
mock = "^5.2.0"
ConfigArgParse = "^1.7.1"
pytest-cov = "^7.0.0"
isort = "^6.0.1"
pylint = "^3.3.8"
sqlalchemy2-stubs = "^0.0.2-alpha.38"
autoflake = "^2.3.1"
watchfiles = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# PYTEST

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __unicode__",
]
show_missing = true
skip_empty = true
omit = [
  "*/__init__.py",
  "app/db/migrator/env.py",
]

[tool.coverage.html]
directory = "pytest-cov-report"

[tool.coverage.run]
branch = true
concurrency = ['thread', 'greenlet']

[tool.pytest.ini_options]
asyncio_mode = "auto"

# LINTERS

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for api routes)
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "app"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
